// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App snapshots > matches the home page snapshot 1`] = `
<DocumentFragment>
  <div
    class="app-shell"
  >
    <header
      class="site-header"
    >
      <div
        class="site-header__inner"
      >
        <a
          aria-current="page"
          class="brand-mark active"
          data-discover="true"
          href="/"
        >
          <span
            class="brand-mark__kanji"
          >
            日本
          </span>
          <span
            class="brand-mark__copy"
          >
            <strong>
              Nihon no Ryori
            </strong>
            <small>
              日本料理のレシピ帳
            </small>
          </span>
        </a>
        <div
          class="site-header__controls"
        >
          <nav
            aria-label="メインナビゲーション"
            class="site-nav"
          >
            <a
              aria-current="page"
              class="site-nav__link is-active"
              data-discover="true"
              href="/"
            >
              ホーム
            </a>
            <a
              aria-current="page"
              class="site-nav__link is-active"
              data-discover="true"
              href="/#catalog"
            >
              レシピ一覧
            </a>
            <a
              aria-current="page"
              class="site-nav__link is-active"
              data-discover="true"
              href="/#about"
            >
              このサイトについて
            </a>
            <a
              class="site-nav__link"
              data-discover="true"
              href="/admin"
            >
              管理
            </a>
          </nav>
          <div
            aria-label="言語切替"
            class="language-switcher"
          >
            <button
              class="language-switcher__button is-active"
              type="button"
            >
              JP
            </button>
            <button
              class="language-switcher__button"
              type="button"
            >
              RU
            </button>
          </div>
        </div>
      </div>
    </header>
    <main
      class="app-content"
    >
      <div
        class="main-page"
        id="catalog"
      >
        <section
          class="main-hero"
        >
          <div
            class="main-header"
          >
            <p
              class="eyebrow"
            >
              Nihon no Ryori
            </p>
            <h1>
              日本の料理を探す
            </h1>
            <p>
              家庭で作りやすい和食を中心に、主菜、汁物、甘味まで季節感のあるレシピをまとめた小さな料理帖です。
            </p>
            <input
              class="search-input"
              placeholder="レシピを検索..."
              type="text"
              value=""
            />
          </div>
          <aside
            class="hero-panel"
          >
            <p
              class="hero-label"
            >
              Featured Dish
            </p>
            <h2>
              海老と野菜の天ぷら
            </h2>
            <p>
              海老、かぼちゃ、ししとうを軽い衣で揚げる、週末の定番てんぷら盛り合わせです。
            </p>
            <div
              class="hero-meta"
            >
              <span>
                東京
              </span>
              <span>
                春
              </span>
              <span>
                中級
              </span>
            </div>
          </aside>
        </section>
        <section
          aria-label="catalog statistics"
          class="stats-row"
        >
          <article
            class="stat-card"
          >
            <strong>
              6
            </strong>
            <span>
              掲載レシピ
            </span>
          </article>
          <article
            class="stat-card"
          >
            <strong>
              4
            </strong>
            <span>
              カテゴリ
            </span>
          </article>
          <article
            class="stat-card"
          >
            <strong>
              4
            </strong>
            <span>
              表示カテゴリ
            </span>
          </article>
          <article
            class="stat-card"
          >
            <strong>
              6
            </strong>
            <span>
              現在の候補
            </span>
          </article>
          <article
            class="stat-card"
          >
            <strong>
              0
            </strong>
            <span>
              お気に入り
            </span>
          </article>
          <article
            class="stat-card"
          >
            <strong>
              0
            </strong>
            <span>
              あと少し
            </span>
          </article>
        </section>
        <section
          class="pantry-panel"
        >
          <div
            class="pantry-panel__copy"
          >
            <p
              class="eyebrow"
            >
              家にある食材から探す
            </p>
            <h2>
              家にある食材から探す
            </h2>
            <p>
              冷蔵庫や戸棚にある材料をカンマ区切りで入力すると、作れそうな料理だけを表示します。
            </p>
          </div>
          <div
            class="pantry-panel__controls"
          >
            <input
              class="search-input"
              placeholder="例: 海老, かぼちゃ, 卵, 薄力粉"
              type="text"
              value=""
            />
            <p
              class="pantry-hint"
            >
              材料はカンマ区切りで入力してください。
            </p>
            <button
              class="category-btn "
              type="button"
            >
              お気に入りのみ
            </button>
          </div>
        </section>
        <nav
          class="category-nav"
        >
          <button
            class="category-btn active"
          >
            すべて
          </button>
          <button
            class="category-btn "
          >
            メイン料理
          </button>
          <button
            class="category-btn "
          >
            副菜
          </button>
          <button
            class="category-btn "
          >
            デザート
          </button>
          <button
            class="category-btn "
          >
            スープ・汁物
          </button>
        </nav>
        <section
          class="section-heading"
        >
          <div>
            <p
              class="eyebrow"
            >
              Recipe Selection
            </p>
            <h2>
              今日の献立に合うレシピ
            </h2>
          </div>
          <p>
            気分に合わせて、軽めの一皿からしっかりした主菜まで選べます。
          </p>
        </section>
        <div
          class="recipe-grid"
        >
          <article
            class="recipe-card"
          >
            <button
              aria-label="お気に入りに追加"
              class="favorite-button"
              type="button"
            >
              ☆
            </button>
            <a
              class="recipe-link"
              data-discover="true"
              href="/recipe/tempura"
            >
              <img
                alt="海老と野菜の天ぷら"
                class="recipe-image"
                src="/src/assets/tempura-vegetables-process.webp"
              />
              <div
                class="recipe-info"
              >
                <div
                  class="recipe-topline"
                >
                  <span>
                    東京
                  </span>
                  <span>
                    春
                  </span>
                </div>
                <h3>
                  海老と野菜の天ぷら
                </h3>
                <p>
                  海老、かぼちゃ、ししとうを軽い衣で揚げる、週末の定番てんぷら盛り合わせです。
                </p>
                <p
                  class="recipe-meta"
                >
                  45 分 | 2 人分
                </p>
                <div
                  class="recipe-tags"
                >
                  <span>
                    揚げ物
                  </span>
                  <span>
                    和定食
                  </span>
                  <span>
                    サクサク
                  </span>
                </div>
              </div>
            </a>
          </article>
          <article
            class="recipe-card"
          >
            <button
              aria-label="お気に入りに追加"
              class="favorite-button"
              type="button"
            >
              ☆
            </button>
            <a
              class="recipe-link"
              data-discover="true"
              href="/recipe/ramen"
            >
              <img
                alt="醤油ラーメン"
                class="recipe-image"
                src="/src/assets/syoyu-ramen.webp"
              />
              <div
                class="recipe-info"
              >
                <div
                  class="recipe-topline"
                >
                  <span>
                    東京
                  </span>
                  <span>
                    冬
                  </span>
                </div>
                <h3>
                  醤油ラーメン
                </h3>
                <p>
                  鶏ガラと昆布のうま味を重ねた、すっきりしながらも奥行きのある醤油ラーメンです。
                </p>
                <p
                  class="recipe-meta"
                >
                  60 分 | 2 人分
                </p>
                <div
                  class="recipe-tags"
                >
                  <span>
                    麺料理
                  </span>
                  <span>
                    だし
                  </span>
                  <span>
                    温まる
                  </span>
                </div>
              </div>
            </a>
          </article>
          <article
            class="recipe-card"
          >
            <button
              aria-label="お気に入りに追加"
              class="favorite-button"
              type="button"
            >
              ☆
            </button>
            <a
              class="recipe-link"
              data-discover="true"
              href="/recipe/onigiri"
            >
              <img
                alt="鮭と梅のおにぎり"
                class="recipe-image"
                src="/src/assets/onigiri-masu-ume.webp"
              />
              <div
                class="recipe-info"
              >
                <div
                  class="recipe-topline"
                >
                  <span>
                    全国
                  </span>
                  <span>
                    通年
                  </span>
                </div>
                <h3>
                  鮭と梅のおにぎり
                </h3>
                <p>
                  朝食や軽食に使いやすい、塩鮭と梅干しを使った具だくさんのおにぎりセットです。
                </p>
                <p
                  class="recipe-meta"
                >
                  20 分 | 3 人分
                </p>
                <div
                  class="recipe-tags"
                >
                  <span>
                    軽食
                  </span>
                  <span>
                    弁当
                  </span>
                  <span>
                    米料理
                  </span>
                </div>
              </div>
            </a>
          </article>
          <article
            class="recipe-card"
          >
            <button
              aria-label="お気に入りに追加"
              class="favorite-button"
              type="button"
            >
              ☆
            </button>
            <a
              class="recipe-link"
              data-discover="true"
              href="/recipe/miso-soup"
            >
              <img
                alt="豆腐とわかめの味噌汁"
                class="recipe-image"
                src="data:image/svg+xml,%3csvg%20width='1200'%20height='900'%20viewBox='0%200%201200%20900'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3crect%20width='1200'%20height='900'%20fill='%23F2E0CC'/%3e%3cellipse%20cx='601'%20cy='750'%20rx='312'%20ry='78'%20fill='%23D3B79A'/%3e%3cpath%20d='M355%20322C355%20246%20465%20184%20601%20184C737%20184%20847%20246%20847%20322V511C847%20619%20737%20707%20601%20707C465%20707%20355%20619%20355%20511V322Z'%20fill='%237C2E24'/%3e%3cellipse%20cx='601'%20cy='352'%20rx='220'%20ry='112'%20fill='%23A1592D'/%3e%3cellipse%20cx='514'%20cy='345'%20rx='54'%20ry='34'%20fill='%23EFE7D4'/%3e%3cellipse%20cx='677'%20cy='323'%20rx='63'%20ry='36'%20fill='%23E7DAB2'/%3e%3cellipse%20cx='596'%20cy='388'%20rx='78'%20ry='40'%20fill='%23F6E7B0'/%3e%3crect%20x='485'%20y='470'%20width='232'%20height='36'%20rx='18'%20fill='%236BA85A'/%3e%3crect%20x='457'%20y='530'%20width='290'%20height='28'%20rx='14'%20fill='%23C37E49'/%3e%3cpath%20d='M435%20249L520%20178'%20stroke='%23402D20'%20stroke-width='14'%20stroke-linecap='round'/%3e%3cpath%20d='M769%20247L680%20174'%20stroke='%23402D20'%20stroke-width='14'%20stroke-linecap='round'/%3e%3c/svg%3e"
              />
              <div
                class="recipe-info"
              >
                <div
                  class="recipe-topline"
                >
                  <span>
                    全国
                  </span>
                  <span>
                    通年
                  </span>
                </div>
                <h3>
                  豆腐とわかめの味噌汁
                </h3>
                <p>
                  毎日の食卓に合わせやすい、だしの香りを生かした基本の味噌汁です。
                </p>
                <p
                  class="recipe-meta"
                >
                  15 分 | 4 人分
                </p>
                <div
                  class="recipe-tags"
                >
                  <span>
                    汁物
                  </span>
                  <span>
                    基本
                  </span>
                  <span>
                    家庭料理
                  </span>
                </div>
              </div>
            </a>
          </article>
          <article
            class="recipe-card"
          >
            <button
              aria-label="お気に入りに追加"
              class="favorite-button"
              type="button"
            >
              ☆
            </button>
            <a
              class="recipe-link"
              data-discover="true"
              href="/recipe/matcha-pudding"
            >
              <img
                alt="抹茶プリン"
                class="recipe-image"
                src="data:image/svg+xml,%3csvg%20width='1200'%20height='900'%20viewBox='0%200%201200%20900'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3crect%20width='1200'%20height='900'%20fill='%23F3E9D9'/%3e%3cellipse%20cx='596'%20cy='752'%20rx='326'%20ry='80'%20fill='%23D8C4AA'/%3e%3crect%20x='294'%20y='237'%20width='620'%20height='390'%20rx='40'%20fill='%231F3022'/%3e%3crect%20x='330'%20y='272'%20width='548'%20height='318'%20rx='24'%20fill='%232F4A34'/%3e%3cellipse%20cx='492'%20cy='410'%20rx='142'%20ry='126'%20fill='%23F7F0E7'/%3e%3cellipse%20cx='706'%20cy='410'%20rx='142'%20ry='126'%20fill='%23F7F0E7'/%3e%3cellipse%20cx='492'%20cy='410'%20rx='112'%20ry='94'%20fill='%239EC173'/%3e%3cellipse%20cx='706'%20cy='410'%20rx='112'%20ry='94'%20fill='%239EC173'/%3e%3cpath%20d='M430%20453C458%20432%20526%20430%20559%20453'%20stroke='%235A7B42'%20stroke-width='14'%20stroke-linecap='round'/%3e%3cpath%20d='M645%20453C673%20432%20741%20430%20774%20453'%20stroke='%235A7B42'%20stroke-width='14'%20stroke-linecap='round'/%3e%3ccircle%20cx='472'%20cy='382'%20r='12'%20fill='%23F7F0E7'/%3e%3ccircle%20cx='726'%20cy='372'%20r='10'%20fill='%23F7F0E7'/%3e%3cpath%20d='M864%20196C905%20214%20942%20249%20972%20296'%20stroke='%23AB7E4B'%20stroke-width='16'%20stroke-linecap='round'/%3e%3c/svg%3e"
              />
              <div
                class="recipe-info"
              >
                <div
                  class="recipe-topline"
                >
                  <span>
                    京都
                  </span>
                  <span>
                    夏
                  </span>
                </div>
                <h3>
                  抹茶プリン
                </h3>
                <p>
                  抹茶のほろ苦さとミルクのコクを合わせた、食後にうれしい和風デザートです。
                </p>
                <p
                  class="recipe-meta"
                >
                  25 分 | 4 人分
                </p>
                <div
                  class="recipe-tags"
                >
                  <span>
                    甘味
                  </span>
                  <span>
                    抹茶
                  </span>
                  <span>
                    冷たい
                  </span>
                </div>
              </div>
            </a>
          </article>
          <article
            class="recipe-card"
          >
            <button
              aria-label="お気に入りに追加"
              class="favorite-button"
              type="button"
            >
              ☆
            </button>
            <a
              class="recipe-link"
              data-discover="true"
              href="/recipe/soba"
            >
              <img
                alt="冷やし天ざるそば"
                class="recipe-image"
                src="data:image/svg+xml,%3csvg%20width='1200'%20height='900'%20viewBox='0%200%201200%20900'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3crect%20width='1200'%20height='900'%20fill='%23EFE2D0'/%3e%3cellipse%20cx='604'%20cy='752'%20rx='332'%20ry='82'%20fill='%23D3B89C'/%3e%3crect%20x='270'%20y='260'%20width='668'%20height='362'%20rx='34'%20fill='%238F5C34'/%3e%3crect%20x='306'%20y='294'%20width='596'%20height='294'%20rx='24'%20fill='%23B07446'/%3e%3cpath%20d='M390%20402C445%20355%20495%20352%20543%20395C592%20438%20642%20438%20694%20393C746%20347%20805%20352%20852%20401'%20stroke='%235D4331'%20stroke-width='16'%20stroke-linecap='round'/%3e%3cpath%20d='M389%20447C444%20400%20494%20396%20543%20439C592%20482%20644%20484%20697%20438C750%20392%20804%20396%20851%20446'%20stroke='%235D4331'%20stroke-width='16'%20stroke-linecap='round'/%3e%3cpath%20d='M396%20494C451%20449%20500%20446%20549%20487C598%20529%20647%20530%20700%20489C753%20449%20802%20448%20844%20484'%20stroke='%235D4331'%20stroke-width='16'%20stroke-linecap='round'/%3e%3cpath%20d='M414%20352C468%20315%20530%20323%20580%20360'%20stroke='%236F8D4A'%20stroke-width='18'%20stroke-linecap='round'/%3e%3cpath%20d='M670%20352C721%20315%20781%20322%20829%20360'%20stroke='%236F8D4A'%20stroke-width='18'%20stroke-linecap='round'/%3e%3ccircle%20cx='498'%20cy='331'%20r='16'%20fill='%23D6D0C0'/%3e%3ccircle%20cx='743'%20cy='335'%20r='14'%20fill='%23D6D0C0'/%3e%3cpath%20d='M945%20162L799%20286'%20stroke='%234A3828'%20stroke-width='16'%20stroke-linecap='round'/%3e%3cpath%20d='M1002%20208L853%20320'%20stroke='%234A3828'%20stroke-width='16'%20stroke-linecap='round'/%3e%3c/svg%3e"
              />
              <div
                class="recipe-info"
              >
                <div
                  class="recipe-topline"
                >
                  <span>
                    長野
                  </span>
                  <span>
                    夏
                  </span>
                </div>
                <h3>
                  冷やし天ざるそば
                </h3>
                <p>
                  香りの良いそばを冷たいつゆで楽しむ、暑い日にうれしい定番メニューです。
                </p>
                <p
                  class="recipe-meta"
                >
                  35 分 | 2 人分
                </p>
                <div
                  class="recipe-tags"
                >
                  <span>
                    麺料理
                  </span>
                  <span>
                    さっぱり
                  </span>
                  <span>
                    和ランチ
                  </span>
                </div>
              </div>
            </a>
          </article>
        </div>
        <section
          class="about-section"
          id="about"
        >
          <div
            class="about-card"
          >
            <p
              class="eyebrow"
            >
              About Project
            </p>
            <h2>
              ヘッダーとフッターについて
            </h2>
            <p>
              どのページからでもホームやレシピ一覧へ戻りやすくし、サイト全体を迷わず回遊できるようにしています。
            </p>
          </div>
        </section>
      </div>
    </main>
    <footer
      class="site-footer"
    >
      <div
        class="site-footer__inner"
      >
        <div
          class="site-footer__copy"
        >
          <p
            class="eyebrow"
          >
            Nihon no Ryori
          </p>
          <h2>
            家庭で楽しむ日本料理
          </h2>
          <p>
            家で作りやすい料理を中心に、カテゴリごとに探せる小さなレシピカタログとしてまとめています。
          </p>
        </div>
        <div
          class="site-footer__links"
        >
          <a
            class="footer-link"
            data-discover="true"
            href="/"
          >
            ホームへ戻る
          </a>
          <a
            class="footer-link"
            href="#catalog"
          >
            レシピ一覧を見る
          </a>
          <a
            class="footer-link"
            href="#about"
          >
            このサイトについて
          </a>
        </div>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`App snapshots > matches the recipe detail page snapshot 1`] = `
<DocumentFragment>
  <div
    class="app-shell"
  >
    <header
      class="site-header"
    >
      <div
        class="site-header__inner"
      >
        <a
          class="brand-mark"
          data-discover="true"
          href="/"
        >
          <span
            class="brand-mark__kanji"
          >
            日本
          </span>
          <span
            class="brand-mark__copy"
          >
            <strong>
              Nihon no Ryori
            </strong>
            <small>
              日本料理のレシピ帳
            </small>
          </span>
        </a>
        <div
          class="site-header__controls"
        >
          <nav
            aria-label="メインナビゲーション"
            class="site-nav"
          >
            <a
              class="site-nav__link"
              data-discover="true"
              href="/"
            >
              ホーム
            </a>
            <a
              class="site-nav__link"
              data-discover="true"
              href="/#catalog"
            >
              レシピ一覧
            </a>
            <a
              class="site-nav__link"
              data-discover="true"
              href="/#about"
            >
              このサイトについて
            </a>
            <a
              class="site-nav__link"
              data-discover="true"
              href="/admin"
            >
              管理
            </a>
          </nav>
          <div
            aria-label="言語切替"
            class="language-switcher"
          >
            <button
              class="language-switcher__button is-active"
              type="button"
            >
              JP
            </button>
            <button
              class="language-switcher__button"
              type="button"
            >
              RU
            </button>
          </div>
        </div>
      </div>
    </header>
    <main
      class="app-content"
    >
      <div
        class="recipe-detail-page"
      >
        <header
          class="recipe-detail-header"
        >
          <img
            alt="海老と野菜の天ぷら"
            class="recipe-hero-image"
            src="/src/assets/tempura-vegetables-process.webp"
          />
          <div
            class="header-copy"
          >
            <div
              class="detail-actions"
            >
              <a
                class="back-link"
                data-discover="true"
                href="/"
              >
                一覧へ戻る
              </a>
              <button
                aria-label="お気に入りに追加"
                class="favorite-button favorite-button--inline"
                type="button"
              >
                ☆
              </button>
            </div>
            <p
              class="eyebrow"
            >
              Recipe Detail
            </p>
            <h1>
              海老と野菜の天ぷら
            </h1>
            <p>
              海老、かぼちゃ、ししとうを軽い衣で揚げる、週末の定番てんぷら盛り合わせです。
            </p>
            <div
              class="meta-tags"
            >
              <span>
                45 分
              </span>
              <span>
                2 人分
              </span>
              <span>
                980 円の目安
              </span>
              <span>
                東京
              </span>
              <span>
                中級
              </span>
            </div>
            <div
              class="recipe-tags"
            >
              <span>
                揚げ物
              </span>
              <span>
                和定食
              </span>
              <span>
                サクサク
              </span>
            </div>
          </div>
        </header>
        <main
          class="recipe-detail-content"
        >
          <section
            class="recipe-detail-section ingredients-section"
          >
            <div
              class="ingredients-header"
            >
              <div>
                <h2>
                  材料
                </h2>
              </div>
              <div
                class="servings-control"
              >
                <span
                  class="servings-control__label"
                >
                  人数を調整
                </span>
                <div
                  class="servings-control__buttons"
                >
                  <button
                    aria-label="人数を減らす"
                    class="servings-button"
                    type="button"
                  >
                    -
                  </button>
                  <strong>
                    2
                  </strong>
                  <button
                    aria-label="人数を増やす"
                    class="servings-button"
                    type="button"
                  >
                    +
                  </button>
                </div>
              </div>
            </div>
            <ul>
              <li>
                海老 6尾
              </li>
              <li>
                かぼちゃ 120g
              </li>
              <li>
                ししとう 6本
              </li>
              <li>
                なす 1本
              </li>
              <li>
                薄力粉 100g
              </li>
              <li>
                片栗粉 20g
              </li>
              <li>
                冷水 160ml
              </li>
              <li>
                卵黄 1個分
              </li>
              <li>
                揚げ油 適量
              </li>
              <li>
                天つゆ・大根おろし 適量
              </li>
            </ul>
          </section>
          <section
            class="recipe-detail-section instructions-section"
          >
            <h2>
              作り方
            </h2>
            <ol>
              <li>
                海老は背わたを取り、尾を残して殻をむき、腹に浅く切り込みを入れてまっすぐにのばします。
              </li>
              <li>
                かぼちゃ、なすは食べやすい厚さに切り、ししとうは数か所に穴を開けておきます。
              </li>
              <li>
                薄力粉と片栗粉を合わせ、卵黄と冷水をさっと混ぜたら粉を加え、だまが少し残る程度で止めます。
              </li>
              <li>
                食材に薄く打ち粉をして衣をまとわせ、170から175度の油で順に揚げます。
              </li>
              <li>
                油を切って器に盛り、天つゆと大根おろしを添えて仕上げます。
              </li>
            </ol>
          </section>
        </main>
        <section
          class="detail-notes"
        >
          <article
            class="note-card"
          >
            <p
              class="eyebrow"
            >
              Kitchen Notes
            </p>
            <h2>
              調理の目安
            </h2>
            <p>
              難易度は 中級、想定予算は 980円前後です。
            </p>
          </article>
          <article
            class="note-card"
          >
            <p
              class="eyebrow"
            >
              Serving Style
            </p>
            <h2>
              合わせたい一品
            </h2>
            <p>
              味噌汁や小鉢を添えると、和定食らしいまとまりが出ます。
            </p>
          </article>
        </section>
        <section
          class="similar-recipes"
        >
          <div
            class="section-heading section-heading--subtle"
          >
            <div>
              <p
                class="eyebrow"
              >
                似ているレシピ
              </p>
              <h2>
                似ているレシピ
              </h2>
            </div>
            <p>
              同じ雰囲気で作りやすい料理を続けて探せます。
            </p>
          </div>
          <div
            class="recipe-grid"
          >
            <article
              class="recipe-card"
            >
              <button
                aria-label="お気に入りに追加"
                class="favorite-button"
                type="button"
              >
                ☆
              </button>
              <a
                class="recipe-link"
                data-discover="true"
                href="/recipe/ramen"
              >
                <img
                  alt="醤油ラーメン"
                  class="recipe-image"
                  src="/src/assets/syoyu-ramen.webp"
                />
                <div
                  class="recipe-info"
                >
                  <div
                    class="recipe-topline"
                  >
                    <span>
                      東京
                    </span>
                    <span>
                      冬
                    </span>
                  </div>
                  <h3>
                    醤油ラーメン
                  </h3>
                  <p>
                    鶏ガラと昆布のうま味を重ねた、すっきりしながらも奥行きのある醤油ラーメンです。
                  </p>
                  <p
                    class="recipe-meta"
                  >
                    60 分 | 2 人分
                  </p>
                  <div
                    class="recipe-tags"
                  >
                    <span>
                      麺料理
                    </span>
                    <span>
                      だし
                    </span>
                    <span>
                      温まる
                    </span>
                  </div>
                </div>
              </a>
            </article>
            <article
              class="recipe-card"
            >
              <button
                aria-label="お気に入りに追加"
                class="favorite-button"
                type="button"
              >
                ☆
              </button>
              <a
                class="recipe-link"
                data-discover="true"
                href="/recipe/soba"
              >
                <img
                  alt="冷やし天ざるそば"
                  class="recipe-image"
                  src="data:image/svg+xml,%3csvg%20width='1200'%20height='900'%20viewBox='0%200%201200%20900'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3crect%20width='1200'%20height='900'%20fill='%23EFE2D0'/%3e%3cellipse%20cx='604'%20cy='752'%20rx='332'%20ry='82'%20fill='%23D3B89C'/%3e%3crect%20x='270'%20y='260'%20width='668'%20height='362'%20rx='34'%20fill='%238F5C34'/%3e%3crect%20x='306'%20y='294'%20width='596'%20height='294'%20rx='24'%20fill='%23B07446'/%3e%3cpath%20d='M390%20402C445%20355%20495%20352%20543%20395C592%20438%20642%20438%20694%20393C746%20347%20805%20352%20852%20401'%20stroke='%235D4331'%20stroke-width='16'%20stroke-linecap='round'/%3e%3cpath%20d='M389%20447C444%20400%20494%20396%20543%20439C592%20482%20644%20484%20697%20438C750%20392%20804%20396%20851%20446'%20stroke='%235D4331'%20stroke-width='16'%20stroke-linecap='round'/%3e%3cpath%20d='M396%20494C451%20449%20500%20446%20549%20487C598%20529%20647%20530%20700%20489C753%20449%20802%20448%20844%20484'%20stroke='%235D4331'%20stroke-width='16'%20stroke-linecap='round'/%3e%3cpath%20d='M414%20352C468%20315%20530%20323%20580%20360'%20stroke='%236F8D4A'%20stroke-width='18'%20stroke-linecap='round'/%3e%3cpath%20d='M670%20352C721%20315%20781%20322%20829%20360'%20stroke='%236F8D4A'%20stroke-width='18'%20stroke-linecap='round'/%3e%3ccircle%20cx='498'%20cy='331'%20r='16'%20fill='%23D6D0C0'/%3e%3ccircle%20cx='743'%20cy='335'%20r='14'%20fill='%23D6D0C0'/%3e%3cpath%20d='M945%20162L799%20286'%20stroke='%234A3828'%20stroke-width='16'%20stroke-linecap='round'/%3e%3cpath%20d='M1002%20208L853%20320'%20stroke='%234A3828'%20stroke-width='16'%20stroke-linecap='round'/%3e%3c/svg%3e"
                />
                <div
                  class="recipe-info"
                >
                  <div
                    class="recipe-topline"
                  >
                    <span>
                      長野
                    </span>
                    <span>
                      夏
                    </span>
                  </div>
                  <h3>
                    冷やし天ざるそば
                  </h3>
                  <p>
                    香りの良いそばを冷たいつゆで楽しむ、暑い日にうれしい定番メニューです。
                  </p>
                  <p
                    class="recipe-meta"
                  >
                    35 分 | 2 人分
                  </p>
                  <div
                    class="recipe-tags"
                  >
                    <span>
                      麺料理
                    </span>
                    <span>
                      さっぱり
                    </span>
                    <span>
                      和ランチ
                    </span>
                  </div>
                </div>
              </a>
            </article>
            <article
              class="recipe-card"
            >
              <button
                aria-label="お気に入りに追加"
                class="favorite-button"
                type="button"
              >
                ☆
              </button>
              <a
                class="recipe-link"
                data-discover="true"
                href="/recipe/onigiri"
              >
                <img
                  alt="鮭と梅のおにぎり"
                  class="recipe-image"
                  src="/src/assets/onigiri-masu-ume.webp"
                />
                <div
                  class="recipe-info"
                >
                  <div
                    class="recipe-topline"
                  >
                    <span>
                      全国
                    </span>
                    <span>
                      通年
                    </span>
                  </div>
                  <h3>
                    鮭と梅のおにぎり
                  </h3>
                  <p>
                    朝食や軽食に使いやすい、塩鮭と梅干しを使った具だくさんのおにぎりセットです。
                  </p>
                  <p
                    class="recipe-meta"
                  >
                    20 分 | 3 人分
                  </p>
                  <div
                    class="recipe-tags"
                  >
                    <span>
                      軽食
                    </span>
                    <span>
                      弁当
                    </span>
                    <span>
                      米料理
                    </span>
                  </div>
                </div>
              </a>
            </article>
          </div>
        </section>
      </div>
    </main>
    <footer
      class="site-footer"
    >
      <div
        class="site-footer__inner"
      >
        <div
          class="site-footer__copy"
        >
          <p
            class="eyebrow"
          >
            Nihon no Ryori
          </p>
          <h2>
            家庭で楽しむ日本料理
          </h2>
          <p>
            家で作りやすい料理を中心に、カテゴリごとに探せる小さなレシピカタログとしてまとめています。
          </p>
        </div>
        <div
          class="site-footer__links"
        >
          <a
            class="footer-link"
            data-discover="true"
            href="/"
          >
            ホームへ戻る
          </a>
          <a
            class="footer-link"
            href="#catalog"
          >
            レシピ一覧を見る
          </a>
          <a
            class="footer-link"
            href="#about"
          >
            このサイトについて
          </a>
        </div>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;
